messing around before the block (10/10/23)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <title>AH . AaaAH</title>
     <!-- <link rel="stylesheet" href="./style.css"> -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
   </head>
   <body>
 	<!-- <script src="index.js" type="module"></script> -->
 
-
+<!--
   <canvas
   style="
     width: 600px;
@@ -29,6 +26,10 @@
   "
   id="newCanva"
 ></canvas>
+-->
+
+
+<iframe width="600px" height="480" style="border: 5px solid grey; margin: auto; top: 1%; display: block; max-height: 50%; max-width: 80%;" src="https://www.youtube.com/embed/MQtsRYPx3v0" title="Graphing a parabola using roots and vertex | Quadratic equations | Algebra I | Khan Academy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <br />
 <p
